[gd_scene load_steps=6 format=3 uid="uid://32ywpm13lwam"]

[ext_resource type="Texture2D" uid="uid://7vsnahh538i7" path="res://assets/blue_panel.png" id="1_3681o"]
[ext_resource type="FontFile" uid="uid://c0r5d3yy12r1p" path="res://assets/LuckiestGuy-Regular.ttf" id="2_145gk"]
[ext_resource type="Script" uid="uid://dkeq7dv1d86sc" path="res://Scenes/LevelButton/LevelButton.gd" id="2_anpwf"]
[ext_resource type="Texture2D" uid="uid://dcpik4kjwgw2c" path="res://assets/green_checkmark.png" id="3_3r2e7"]

[sub_resource type="LabelSettings" id="LabelSettings_3r2e7"]
font = ExtResource("2_145gk")
font_size = 32
outline_size = 5
outline_color = Color(0.141894, 0.141894, 0.141894, 1)

[node name="LevelButton" type="NinePatchRect"]
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
texture = ExtResource("1_3681o")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("2_anpwf")

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_3r2e7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckMark" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 23.0
offset_bottom = 22.0
texture = ExtResource("3_3r2e7")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
